--- a/mech.html
+++ b/mech.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>ME </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ME </title>
 </head>
 <body style="background-color:LIGHTBLUE;">
 <p>Mechanical Engineering<br>
