--- a/catalogue.html
+++ b/catalogue.html
@@ -1,43 +1,56 @@
 <!DOCtype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalogue</title>
-    <style>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Catalogue</title>
+        <style>
 	td, th {
   	border: 1px solid #dddddd;
   	text-align: left;
  	 padding: 8px;
 	}
     </style>
-</head>
-<body>
-<center>
-<table style="border: 2px solid black;">
-<tr>
-    <th>Sno.</th>
-    <th>book Img</th>
-    <th>Name of the Book</th>
-    <th>Pages</th>
-    <th>Progress</th>
-</tr>
-<tr>
-        <td>1</td>
-	<td><img src="https://i.etsystatic.com/24307483/r/il/582184/3121962896/il_1080xN.3121962896_dfx4.jpg" height="100px" width="100px"></td>
-        <td>Rich Dad Poor Dad</td>
-	<td>450</td>
-	<td><button>Add to cart</button></td>
-</tr>
-<tr>
-	<td>2</td>
-	<td><img src="https://th.bing.com/th/id/R.847ff818eb060a80aa401c0273ee49ef?rik=PitBxG7NXly9yA&riu=http%3a%2f%2fi2.wp.com%2fgeekdad.com%2fwp-content%2fuploads%2f2013%2f02%2fHP1-Kibuishi.jpg&ehk=uafYYv3yMqpRGlecJf0Si6SPSZwksDcZUzc982%2byhlQ%3d&risl=&pid=ImgRaw&r=0" height="100px" width="100px"></td>
-        <td>Harry Potter and the sorcerer's stone</td>
-	<td>630</td>
-	<td><button>Add to cart</button></td>
-</tr>
-</table>
-</center>
+    </head>
+    <body>
+        <center>
+            <table style="border: 2px solid black;">
+                <tr>
+                    <th>Sno.</th>
+                    <th>book Img</th>
+                    <th>Name of the Book</th>
+                    <th>Pages</th>
+                    <th>Progress</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td><img
+                            src="https://i.etsystatic.com/24307483/r/il/582184/3121962896/il_1080xN.3121962896_dfx4.jpg"
+                            height="100px" width="100px"></td>
+                    <td>Rich Dad Poor Dad</td>
+                    <td>450</td>
+                    <td><button>Add to cart</button></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td><img
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFehMi8sdT_gKkefky-xnpCl7_ZLUlDhfRpQ&s"
+                            height="100px" width="100px"></td>
+                    <td>Think and Grow Rich</td>
+                    <td>253</td>
+                    <td><button>Add to cart</button></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><img
+                            src="https://prodimage.images-bn.com/pimages/9781804090114_p0_v2_s1200x630.jpg"
+                            height="100px" width="100px"></td>
+                    <td>Psychology of Money</td>
+                    <td>256</td>
+                    <td><button>Add to cart</button></td>
+                </tr>
+            </table>
+        </center>
 
-</body>
+    </body>
 </html>
