--- a/ECE.html
+++ b/ECE.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> ECE </title>
-</head>
-<body style="background-color:LIGHTBLUE;">
-<p>Electronics and Communication Engineering<br>
-<ul>
-<li>Digital Circuits</li>
-<li>Signals and Systems</li>
-<li>Digital communication</li>
-</ul>
-</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> ECE </title>
+        <style>
+            body{
+               background-color: #3F4F44;
+            }
+        </style>
+    </head>
+    <body>
+        <p>Electronics and Communication Engineering<br>
+            <ul>
+                <li>Digital Circuits</li>
+                <li>Signals and Systems</li>
+                <li>Digital communication</li>
+            </ul>
+        </p>
+    </body>
 </html>
