--- a/EEE.html
+++ b/EEE.html
@@ -1,15 +1,22 @@
-<!doc type html>
+<!DOCTYPE html>
 <html>
-<head>
-<title>EEE</title>
-</head>
-<body style="background-color:LIGHTBLUE;">
-<p>Electrical and Electronics Engineering<br>
-<ul type='square'>
-<li>Concepts in Electronical Engineering</li>
-<li>Introduction to Electronic Circuits Engineering </li>
-<li>Electrical Power</li>
-</ul>
-</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>EEE</title>
+        <style>
+            body {
+            background-color: #3F4F44;
+            }
+        </style>
+    </head>
+    <body>
+        <p>Electrical and Electronics Engineering<br>
+            <ul type='square'>
+                <li>Concepts in Electronical Engineering</li>
+                <li>Introduction to Electronic Circuits Engineering </li>
+                <li>Electrical Power</li>
+            </ul>
+        </p>
+    </body>
 </html>
