--- a/catalogue.html
+++ b/catalogue.html
@@ -5,6 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Catalogue</title>
         <style>
+         body{
+            background-color: rgb(182, 139, 103);
+            text-align: center;
+            align-items: center;
+         }
 	td, th {
   	border: 1px solid #dddddd;
   	text-align: left;
@@ -13,44 +18,41 @@
     </style>
     </head>
     <body>
-        <center>
-            <table style="border: 2px solid black;">
-                <tr>
-                    <th>Sno.</th>
-                    <th>book Img</th>
-                    <th>Name of the Book</th>
-                    <th>Pages</th>
-                    <th>Progress</th>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td><img
-                            src="https://i.etsystatic.com/24307483/r/il/582184/3121962896/il_1080xN.3121962896_dfx4.jpg"
-                            height="100px" width="100px"></td>
-                    <td>Rich Dad Poor Dad</td>
-                    <td>450</td>
-                    <td><button>Add to cart</button></td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td><img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFehMi8sdT_gKkefky-xnpCl7_ZLUlDhfRpQ&s"
-                            height="100px" width="100px"></td>
-                    <td>Think and Grow Rich</td>
-                    <td>253</td>
-                    <td><button>Add to cart</button></td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td><img
-                            src="https://prodimage.images-bn.com/pimages/9781804090114_p0_v2_s1200x630.jpg"
-                            height="100px" width="100px"></td>
-                    <td>Psychology of Money</td>
-                    <td>256</td>
-                    <td><button>Add to cart</button></td>
-                </tr>
-            </table>
-        </center>
-
+        <table style="border: 2px solid black;">
+            <tr>
+                <th>Sno.</th>
+                <th>book Img</th>
+                <th>Name of the Book</th>
+                <th>Pages</th>
+                <th>Progress</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td><img
+                        src="https://i.etsystatic.com/24307483/r/il/582184/3121962896/il_1080xN.3121962896_dfx4.jpg"
+                        height="100px" width="100px"></td>
+                <td>Rich Dad Poor Dad</td>
+                <td>450</td>
+                <td><button>Add to cart</button></td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td><img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFehMi8sdT_gKkefky-xnpCl7_ZLUlDhfRpQ&s"
+                        height="100px" width="100px"></td>
+                <td>Think and Grow Rich</td>
+                <td>253</td>
+                <td><button>Add to cart</button></td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td><img
+                        src="https://prodimage.images-bn.com/pimages/9781804090114_p0_v2_s1200x630.jpg"
+                        height="100px" width="100px"></td>
+                <td>Psychology of Money</td>
+                <td>256</td>
+                <td><button>Add to cart</button></td>
+            </tr>
+        </table>
     </body>
 </html>
