--- a/mech.html
+++ b/mech.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ME </title>
-</head>
-<body style="background-color:LIGHTBLUE;">
-<p>Mechanical Engineering<br>
-<ol type='I'>
-<li>Theory of Machines</li>
-<li>Automation and Robotics</li>
-<li>Engineering Fluid Mechanies</li>
-</ol>
-</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>ME </title>
+        <style>
+        body {
+        background-color: #486651;
+        }
+    </style>
+    </head>
+    <body>
+        <p>Mechanical Engineering<br>
+            <ol type='I'>
+                <li>Theory of Machines</li>
+                <li>Automation and Robotics</li>
+                <li>Engineering Fluid Mechanies</li>
+            </ol>
+        </p>
+    </body>
 </html>
