--- a/confirm.html
+++ b/confirm.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Confirm </title>
-</head>
-<body style="background-color:LIGHTBLUE;">
-<center>
-<h1>Your Order is Confirmed</h1>
-<h1>THANK YOU </h1>
-<h1>Visit Again ....</h1>
-</center>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Confirm </title>
+        <style>
+            body{
+                background-color: #447427;
+                text-align: center;
+            }
+
+        </style>
+    </head>
+    <body>
+        <h1>Your Order is Confirmed</h1>
+        <h1>THANK YOU </h1>
+        <h1>Visit Again ....</h1>
+    </body>
 </html>
