--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Book Store</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="header">
-        <h1>Online Book Store</h1>
-        <h2>Created and Maintained by</h2>
-        <h2>Dept of CSE</h2>
-        <h3>LIET</h3>
-    </div>
-    <div class="nav">
-        <a href="login.html">Login</a>
-        <a href="Registrationjs.html">Registration</a>
-        <a href="catalogue.html">Catalogue</a>
-    </div>
-    <div class="content">
-        <div class="sidebar">
-            <a href="IT.html"><button>IT</button></a>
-            <a href="ECE.html"><button>ECE</button></a>
-            <a href="EEE.html"><button>EEE</button></a>
-            <a href="mech.html"><button>MECH</button></a>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Online Book Store</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div class="header">
+            <h1>Online Book Store</h1>
+            <h2>Created and Maintained by</h2>
+            <h2>Dept of CSE</h2>
+            <h3>LIET</h3>
         </div>
-        <div class="main">
-            <p>📚 Image of Books</p>
+        <div class="nav">
+            <a href="login.html">Login</a>
+            <a href="Registrationjs.html">Registration</a>
+            <a href="catalogue.html">Catalogue</a>
         </div>
-    </div>
-    <div class="footer">
-        Welcome to the Online Book Store
-    </div>
+        <div class="content">
+            <div class="sidebar">
+                <a href="IT.html"><button>IT</button></a>
+                <a href="ECE.html"><button>ECE</button></a>
+                <a href="EEE.html"><button>EEE</button></a>
+                <a href="mech.html"><button>MECH</button></a>
+            </div>
+            <div class="main">
+                <p>📚 Image of Books</p>
+            </div>
+        </div>
+        <div class="footer">
+            Welcome to the Online Book Store
+        </div>
 
-</body>
+    </body>
 </html>
