--- a/IT.html
+++ b/IT.html
@@ -12,8 +12,15 @@
             cursor: pointer;
         }
         body{
-            background-color:#447427;
+            background-color:#3F4F44;
             text-align: center;
+        }
+        a{
+            color: white;
+            text-decoration: none;
+        }
+        button{
+            padding: 5px 10px 5px 10px;
         }
 </style>
     </head>
@@ -32,6 +39,6 @@
         <label>Quantity : </label>
         <input type="number"><br>
         <pre>Cost of one book is "500" + shipping "100"</pre>
-        <button type="submit"><a href="confirm.html"> OK </a></button>
+        <button type="submit"><a href="confirm.html" > OK </a></button>
     </body>
 </html>
