--- a/catalogue.html
+++ b/catalogue.html
@@ -15,6 +15,10 @@
   	text-align: left;
  	 padding: 8px;
 	}
+    a{
+        color: black;
+        text-decoration: none;
+    }
     </style>
     </head>
     <body>
@@ -27,31 +31,46 @@
                 <th>Progress</th>
             </tr>
             <tr>
+
                 <td>1</td>
+                <td><img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfYJowzq1YNm-3L_Q2f3Vy6DFU162MqeL2xg&s"
+                        height="100px" width="100px"></td>
+                <td>Atomic Habits</td>
+                <td>320</td>
+                <td><button><a
+                            href="https://drive.google.com/drive/folders/1H0P7YnEtUcaVbHBfYBdy_cZVZR9_Kp0d">Download</a></button></td>
+            </tr>
+            <tr>
+
+                <td>2</td>
                 <td><img
                         src="https://i.etsystatic.com/24307483/r/il/582184/3121962896/il_1080xN.3121962896_dfx4.jpg"
                         height="100px" width="100px"></td>
                 <td>Rich Dad Poor Dad</td>
                 <td>450</td>
-                <td><button>Add to cart</button></td>
+                <td><button><a
+                            href="https://drive.google.com/drive/folders/1GmV5wpubW_hg3wBoi7LBEitLn8uEpOyB">Download</a></button></td>
             </tr>
             <tr>
-                <td>2</td>
+                <td>3</td>
                 <td><img
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFehMi8sdT_gKkefky-xnpCl7_ZLUlDhfRpQ&s"
                         height="100px" width="100px"></td>
                 <td>Think and Grow Rich</td>
                 <td>253</td>
-                <td><button>Add to cart</button></td>
+                <td><button><a
+                            href="https://drive.google.com/drive/folders/1cVq-nLrGjyCbmsJWphtoPHEv82xox6XH">Download</a></button></td>
             </tr>
             <tr>
-                <td>3</td>
+                <td>4</td>
                 <td><img
                         src="https://prodimage.images-bn.com/pimages/9781804090114_p0_v2_s1200x630.jpg"
                         height="100px" width="100px"></td>
                 <td>Psychology of Money</td>
                 <td>256</td>
-                <td><button>Add to cart</button></td>
+                <td><button><a
+                            href="https://drive.google.com/drive/folders/1cVy9ficELsopaX6zXTLE4wsCruulOV2g">Download</a></button></td>
             </tr>
         </table>
     </body>
