--- a/confirm.html
+++ b/confirm.html
@@ -6,7 +6,7 @@
         <title>Confirm </title>
         <style>
             body{
-                background-color: #447427;
+                background-color: #3F4F44;
                 text-align: center;
             }
 
