--- a/catalogue.html
+++ b/catalogue.html
@@ -19,6 +19,10 @@
         color: black;
         text-decoration: none;
     }
+    .download{
+        background-color: gray;
+        border-radius: 10px;
+    }
     </style>
     </head>
     <body>
@@ -38,7 +42,7 @@
                         height="100px" width="100px"></td>
                 <td>Atomic Habits</td>
                 <td>320</td>
-                <td><button><a
+                <td><button class="download"><a
                             href="https://drive.google.com/drive/folders/1H0P7YnEtUcaVbHBfYBdy_cZVZR9_Kp0d">Download</a></button></td>
             </tr>
             <tr>
@@ -49,7 +53,7 @@
                         height="100px" width="100px"></td>
                 <td>Rich Dad Poor Dad</td>
                 <td>450</td>
-                <td><button><a
+                <td><button class="download"><a
                             href="https://drive.google.com/drive/folders/1GmV5wpubW_hg3wBoi7LBEitLn8uEpOyB">Download</a></button></td>
             </tr>
             <tr>
@@ -59,7 +63,7 @@
                         height="100px" width="100px"></td>
                 <td>Think and Grow Rich</td>
                 <td>253</td>
-                <td><button><a
+                <td><button class="download"><a
                             href="https://drive.google.com/drive/folders/1cVq-nLrGjyCbmsJWphtoPHEv82xox6XH">Download</a></button></td>
             </tr>
             <tr>
@@ -69,7 +73,7 @@
                         height="100px" width="100px"></td>
                 <td>Psychology of Money</td>
                 <td>256</td>
-                <td><button><a
+                <td><button class="download"><a
                             href="https://drive.google.com/drive/folders/1cVy9ficELsopaX6zXTLE4wsCruulOV2g">Download</a></button></td>
             </tr>
         </table>
