--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
         </div>
         <div class="content">
             <div class="sidebar">
-                <a href="IT.html"><button>IT</button></a>
-                <a href="ECE.html"><button>ECE</button></a>
-                <a href="EEE.html"><button>EEE</button></a>
-                <a href="mech.html"><button>MECH</button></a>
+                <a href="IT.html"><button class="dis">IT</button></a>
+                <a href="ECE.html"><button class="dis">ECE</button></a>
+                <a href="EEE.html"><button class="dis">EEE</button></a>
+                <a href="mech.html"><button class="dis">MECH</button></a>
             </div>
             <div class="main">
-                <p>📚 Image of Books</p>
+                <img id="image" src="https://images.squarespace-cdn.com/content/v1/5dd5d482354a76685e11529e/1682321926744-SUD9DHOOURAVZ89QEGX1/unsplash-image-mo3FOTG62ao.jpg">
+        
             </div>
         </div>
         <div class="footer">
