--- a/IT.html
+++ b/IT.html
@@ -20,7 +20,10 @@
             text-decoration: none;
         }
         button{
-            padding: 5px 10px 5px 10px;
+            padding: 5px 30px 5px 30px;
+        }
+        .ok{
+            border-radius: 10px;
         }
 </style>
     </head>
@@ -39,6 +42,6 @@
         <label>Quantity : </label>
         <input type="number"><br>
         <pre>Cost of one book is "500" + shipping "100"</pre>
-        <button type="submit"><a href="confirm.html" > OK </a></button>
+        <button type="submit" class="ok"><a href="confirm.html" > OK </a></button>
     </body>
 </html>
