--- a/Registrationjs.html
+++ b/Registrationjs.html
@@ -23,6 +23,10 @@
             border: none;
             cursor: pointer;
         }
+        .button1{
+        border-radius: 20px; 
+        padding: 10px 20px 10px 20px;
+        }
     </style>
 </head>
 <body>
@@ -46,7 +50,7 @@
         <label>ADDRESS:</label>
         <input id="address" placeholder="Address"></input><br><br>
 
-        <button type="submit">SUBMIT</button>
+        <button class="button1" type="submit">SUBMIT</button>
     </form>
 
     <script>
