--- a/catalogue.html
+++ b/catalogue.html
@@ -23,10 +23,14 @@
         background-color: gray;
         border-radius: 10px;
     }
+    .table1{
+        height: 100%;
+        width: 100%;
+    }
     </style>
     </head>
     <body>
-        <table style="border: 2px solid black;">
+        <table class="table1" style="border: 2px solid black;">
             <tr>
                 <th>Sno.</th>
                 <th>book Img</th>
