--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Online Book Store</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body class="body1">
         <div class="header">
             <h1>Online Book Store</h1>
             <h2>Created and Maintained by</h2>
