--- a/catalogue.html
+++ b/catalogue.html
@@ -27,23 +27,38 @@
         height: 100%;
         width: 100%;
     }
+    img{
+        height: 100%;
+        width: 100%;
+        padding: 0px;
+    }
+    tr{
+        padding: 0px;
+    }
+    td{
+        padding: 0px;
+        text-align: center;
+    }
+    tr{
+        padding: 0px;
+    }
     </style>
     </head>
     <body>
         <table class="table1" style="border: 2px solid black;">
             <tr>
-                <th>Sno.</th>
-                <th>book Img</th>
+                <th>S.no</th>
+                <th>Image of the Book</th>
                 <th>Name of the Book</th>
                 <th>Pages</th>
-                <th>Progress</th>
+                <th>Download</option></th>
             </tr>
             <tr>
 
                 <td>1</td>
                 <td><img
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfYJowzq1YNm-3L_Q2f3Vy6DFU162MqeL2xg&s"
-                        height="100px" width="100px"></td>
+                        ></td>
                 <td>Atomic Habits</td>
                 <td>320</td>
                 <td><button class="download"><a
@@ -54,7 +69,7 @@
                 <td>2</td>
                 <td><img
                         src="https://i.etsystatic.com/24307483/r/il/582184/3121962896/il_1080xN.3121962896_dfx4.jpg"
-                        height="100px" width="100px"></td>
+                        ></td>
                 <td>Rich Dad Poor Dad</td>
                 <td>450</td>
                 <td><button class="download"><a
@@ -64,7 +79,7 @@
                 <td>3</td>
                 <td><img
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFehMi8sdT_gKkefky-xnpCl7_ZLUlDhfRpQ&s"
-                        height="100px" width="100px"></td>
+                    ></td>
                 <td>Think and Grow Rich</td>
                 <td>253</td>
                 <td><button class="download"><a
@@ -74,7 +89,7 @@
                 <td>4</td>
                 <td><img
                         src="https://prodimage.images-bn.com/pimages/9781804090114_p0_v2_s1200x630.jpg"
-                        height="100px" width="100px"></td>
+                       ></td>
                 <td>Psychology of Money</td>
                 <td>256</td>
                 <td><button class="download"><a
